tests/resource/invalid/type/definition/function_ret_not_super.mamba
def some_higher_order(fun: Int -> Int) -> Int? => return fun(10)
def fancy() -> Int => return some_higher_order(\x: Int => x * 2)

fancy()
